--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -47,3 +47,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}
+
+concurrency:
+  group: ${{ github.ref }}-docker
+  cancel-in-progress: true
